third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/array-no-close-2.stderr
TOML parse error at line 1, column 26
  |
1 | [[closing-bracket.missing]
  |                          ^
invalid table header
expected `.`, `]]`
